--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,7 @@
   position: fixed;
   width: 100%;
   padding: 30px 0;
-  /* background: crimson; */
   font-family: 'Ubuntu', sans-serif;
-  transition: all 0.3s ease;
 }
 
 .navbar .max-width {
@@ -33,6 +31,7 @@
   color: #fff;
   font-size: 35px;
   font-weight: 600;
+  margin-left: -30px;
 }
 
 .navbar .logo a span {
@@ -55,6 +54,15 @@
 
 .navbar .menu li a:hover {
   color: crimson;
+}
+
+/* Menu button styling */
+
+.menu-btn {
+  color: #fff;
+  font-size: 23px;
+  cursor: pointer;
+  display: none;
 }
 
 /* Home section styling */
@@ -91,3 +99,81 @@
   font-weight: 500;
 }
 
+.home .home-content a {
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 25px;
+  padding: 12px 36px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+}
+
+.home .home-content a:hover {
+  color: crimson;
+  background: none;
+}
+
+/* Responsive media query start */
+
+@media (max-width: 1104px) {
+  .home .max-width {
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 991px) {
+  .max-width {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width: 690px) {
+  .max-width {
+    padding: 0 23px;
+  }
+  .home .home-content .text-2 {
+    font-size: 60px;
+  }
+  .home .home-content .text-3 {
+    font-size: 32px;
+  }
+  .home .home-content a {
+    font-size: 23px;
+    padding: 10px 30px;
+  }
+}
+
+/* @media (max-width: 947px) {
+  .max-width {
+    padding: 0 50px;
+  }
+  .menu-btn {
+    display: block;
+    z-index: 999;
+  }
+  .navbar .menu {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: -100%;
+    top: 0;
+    background: #111;
+    text-align: center;
+    padding-top: 80px;
+  }
+  .navbar .menu.active {
+    left: 0%;
+
+  }
+  .navbar .menu li {
+    display: block;
+  }
+  .navbar .menu li a {
+    display: inline-block;
+    margin: 20px 0;
+    font-size: 25px;
+  }
+} */
