--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@
   font-family: 'Ubuntu', sans-serif;
 }
 
+.navbar.active {
+  padding: 30px 0;
+  background: crimson;
+}
+
 .navbar .max-width {
   display: flex;
   align-items: center;
@@ -31,12 +36,15 @@
   color: #fff;
   font-size: 35px;
   font-weight: 600;
-  margin-left: -30px;
 }
 
 .navbar .logo a span {
   color: crimson;
+  transition: all 0.3s ease;
+}
 
+.navbar.active .logo a span {
+  color: #fff;
 }
 
 .navbar .menu li {
@@ -52,8 +60,13 @@
   transition: color 0.3s ease;
 }
 
+.navbar.active .menu li a:hover {
+  color: #fff;
+}
+
 .navbar .menu li a:hover {
   color: crimson;
+
 }
 
 /* Menu button styling */
@@ -118,41 +131,13 @@
 
 /* Responsive media query start */
 
-@media (max-width: 1104px) {
-  .home .max-width {
-    margin-left: 0px;
-  }
-}
-
-@media (max-width: 991px) {
-  .max-width {
-    padding: 0 50px;
-  }
-}
-
-@media (max-width: 690px) {
-  .max-width {
-    padding: 0 23px;
-  }
-  .home .home-content .text-2 {
-    font-size: 60px;
-  }
-  .home .home-content .text-3 {
-    font-size: 32px;
-  }
-  .home .home-content a {
-    font-size: 23px;
-    padding: 10px 30px;
-  }
-}
-
-/* @media (max-width: 947px) {
-  .max-width {
-    padding: 0 50px;
-  }
+@media (max-width: 947px) {
   .menu-btn {
     display: block;
     z-index: 999;
+  }
+  .max-width {
+    padding: 0 50px;
   }
   .navbar .menu {
     position: fixed;
@@ -165,8 +150,7 @@
     padding-top: 80px;
   }
   .navbar .menu.active {
-    left: 0%;
-
+    left: 0;
   }
   .navbar .menu li {
     display: block;
@@ -176,4 +160,4 @@
     margin: 20px 0;
     font-size: 25px;
   }
-} */
+}
