--- a/src/App.css
+++ b/src/App.css
@@ -130,14 +130,23 @@
 }
 
 /* Responsive media query start */
+@media (max-width: 1104px) {
+  .home .max-width {
+    margin-left: 0px;
+  }
+}
 
 @media (max-width: 947px) {
+  .max-width {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width: 991px) {
   .menu-btn {
     display: block;
     z-index: 999;
-  }
-  .max-width {
-    padding: 0 50px;
+    color: #fff;
   }
   .navbar .menu {
     position: fixed;
@@ -148,6 +157,7 @@
     background: #111;
     text-align: center;
     padding-top: 80px;
+    transition: all 0.3s ease;
   }
   .navbar .menu.active {
     left: 0;
@@ -159,5 +169,32 @@
     display: inline-block;
     margin: 20px 0;
     font-size: 25px;
+  }
+  .home .home-content .text-2 {
+    font-size: 70px;
+  }
+  .home .home-content .text-3 {
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 690px) {
+  .max-width {
+    padding: 0 23px;
+  }
+  .home .home-content .text-2 {
+    font-size: 60px;
+  }
+  .home .home-content .text-3 {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 500px) {
+  .home .home-content .text-2 {
+    font-size: 50px;
+  }
+  .home .home-content .text-3 {
+    font-size: 27px;
   }
 }
