--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,10 @@
 .navbar {
   position: fixed;
   width: 100%;
+  z-index: 999;
   padding: 30px 0;
   font-family: 'Ubuntu', sans-serif;
+  transition: all 0.3s ease;
 }
 
 .navbar.active {
@@ -57,6 +59,7 @@
   font-size: 18px;
   font-weight: 500;
   margin-left: 25px;
+  cursor: pointer;
   transition: color 0.3s ease;
 }
 
@@ -129,10 +132,118 @@
   background: none;
 }
 
+/* Aboutme section styling */
+
+section {
+  padding: 100px 0;
+}
+
+.about {
+  font-family: 'Poppins', sans-serif;
+}
+
+.about .title {
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+.about .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: #111;
+  transform: translateX(-50%);
+}
+
+.about .title::after {
+  content: "who i am";
+  position: absolute;
+  bottom: -12px;
+  left: 50%;
+  font-size: 20px;
+  color: crimson;
+  padding: 5px;
+  background: #fff;
+  transform: translateX(-50%);
+}
+
+.about .about-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.about .about-content .left {
+  width: 45%;
+}
+
+.about .about-content .left img {
+  height: 400px;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.about .about-content .right {
+  width: 55%;
+}
+
+.about .about-content .right .text {
+  font-size: 25px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.about .about-content .right .text span {
+  color: crimson;
+}
+
+.about .about-content .right p {
+  text-align: justify;
+}
+
+.about .about-content .right a {
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 10px 30px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+}
+
+.about .about-content .right a:hover {
+  color: crimson;
+  background: none;
+}
+
+
+
+
+
 /* Responsive media query start */
-@media (max-width: 1104px) {
+@media (max-width: 1300px) {
   .home .max-width {
     margin-left: 0px;
+  }
+}
+
+@media (max-width: 1104px) {
+  .about .about-content .left img {
+    height: 350px;
+    width: 350px;
   }
 }
 
@@ -142,7 +253,7 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 947px) {
   .menu-btn {
     display: block;
     z-index: 999;
@@ -176,6 +287,24 @@
   .home .home-content .text-3 {
     font-size: 35px;
   }
+  .home .home-content a {
+    font-size: 23px;
+    padding: 10px 30px;
+  }
+  .max-width {
+    max-width: 800px;
+  }
+  .about .about-content .column {
+    width: 100%;
+  }
+  .about .about-content .left {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 60px;
+  }
+  .about .about-content .right {
+    flex: 100%;
+  }
 }
 
 @media (max-width: 690px) {
@@ -187,6 +316,9 @@
   }
   .home .home-content .text-3 {
     font-size: 32px;
+  }
+  .home .home-content a {
+    font-size: 20px;
   }
 }
 
