--- a/src/App.css
+++ b/src/App.css
@@ -134,17 +134,13 @@
   background: none;
 }
 
-/* Aboutme section styling */
+/* All similar content styling code */
 
 section {
   padding: 100px 0;
 }
 
-.about {
-  font-family: 'Poppins', sans-serif;
-}
-
-.about .title {
+section .title {
   position: relative;
   text-align: center;
   font-size: 40px;
@@ -154,7 +150,7 @@ section {
   font-family: 'Ubuntu', sans-serif;
 }
 
-.about .title::before {
+section .title::before {
   content: "";
   position: absolute;
   bottom: 0px;
@@ -165,8 +161,7 @@ section {
   transform: translateX(-50%);
 }
 
-.about .title::after {
-  content: "who i am";
+section .title::after {
   position: absolute;
   bottom: -12px;
   left: 50%;
@@ -177,7 +172,18 @@ section {
   transform: translateX(-50%);
 }
 
-.about .about-content {
+/* Aboutme section styling */
+
+.about, .services {
+  font-family: 'Poppins', sans-serif;
+}
+
+.about .title::after {
+  content: "who i am";
+}
+
+.about .about-content,
+.services .serv-content {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -229,6 +235,60 @@ section {
 .about .about-content .right a:hover {
   color: crimson;
   background: none;
+}
+
+/* Services section styling */
+
+.services {
+  color: #fff;
+  background: #111;
+}
+
+.services .title::before {
+  background: #fff;
+}
+
+.services .title::after {
+  background: #111;
+  content: "what i provide";
+}
+
+.services .serv-content .card {
+  width: calc(33% - 20px);
+  background: #222;
+  text-align: center;
+  border-radius: 6px;
+  padding: 20px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.services .serv-content .card:hover {
+  background: crimson;
+}
+
+.services .serv-content .card .box {
+  transition: all 0.3s ease;
+}
+
+.services .serv-content .card:hover .box {
+  transform: scale(1.05);
+}
+
+.services .serv-content .card i {
+  font-size: 50px;
+  color: crimson;
+  transition: color 0.3s ease;
+}
+
+.services .serv-content .card:hover i {
+  color: #fff;
+}
+
+.services .serv-content .card .text {
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px 0;
 }
 
 /* Responsive media query start */
@@ -303,6 +363,10 @@ section {
   .about .about-content .right {
     flex: 100%;
   }
+  .services .serv-content .card {
+    width: calc(50% - 10px);
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 690px) {
@@ -317,6 +381,9 @@ section {
   }
   .home .home-content a {
     font-size: 20px;
+  }
+  .services .serv-content .card {
+    width: 100%;
   }
 }
 
