Skills section finished and started Contact component

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,20 @@ section {
   padding: 100px 0;
 }
 
+.about, .services, .skills, .contact {
+  font-family: 'Poppins', sans-serif;
+}
+
+.about .about-content,
+.services .serv-content,
+.skills .skills-content,
+.contact .contact-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
 section .title {
   position: relative;
   text-align: center;
@@ -174,20 +188,8 @@ section .title::after {
 
 /* Aboutme section styling */
 
-.about, .services {
-  font-family: 'Poppins', sans-serif;
-}
-
 .about .title::after {
   content: "who i am";
-}
-
-.about .about-content,
-.services .serv-content {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .about .about-content .left {
@@ -253,11 +255,13 @@ section .title::after {
   content: "what i provide";
 }
 
-.services .serv-content .card {
+.services .serv-content .card,
+.skills .skills-content .card {
   width: calc(33% - 20px);
   background: #222;
   text-align: center;
   border-radius: 6px;
+  margin-bottom: 15px;
   padding: 20px 25px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -289,6 +293,65 @@ section .title::after {
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0 7px 0;
+}
+
+/* Skills section styling */
+
+.skills {
+  color: #111;
+  background: #fff;
+}
+
+/* .skills .skills-content .card {
+  width: calc(33% - 20px);
+  background: #222;
+  text-align: center;
+  border-radius: 6px;
+  padding: 20px 25px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+} */
+
+.skills .skills-content .card:hover {
+  background: crimson;
+}
+
+.skills .skills-content .card:hover .box {
+  transform: scale(1.05);
+}
+
+.skills .skills-content .card .box {
+  transition: all 0.3s ease;
+}
+
+.skills .skills-content .card:hover .box {
+  transform: scale(1.05);
+}
+
+.skills .skills-content .card .text {
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px 0;
+}
+
+/* Contact section styling */
+
+.contact .title::after {
+  content: "get in touch";
+}
+
+.contact .contact-content .column {
+  width: calc(50% - 30px);
+}
+
+.contact .contact-content .text {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact .contact-content .left p {
+  text-align: justify;
 }
 
 /* Responsive media query start */
@@ -363,7 +426,8 @@ section .title::after {
   .about .about-content .right {
     flex: 100%;
   }
-  .services .serv-content .card {
+  .services .serv-content .card,
+  .skills .skills-content .card {
     width: calc(50% - 10px);
     margin-bottom: 20px;
   }
@@ -382,7 +446,8 @@ section .title::after {
   .home .home-content a {
     font-size: 20px;
   }
-  .services .serv-content .card {
+  .services .serv-content .card,
+  .skills .skills-content .card {
     width: 100%;
   }
 }
