--- a/src/App.css
+++ b/src/App.css
@@ -332,6 +332,7 @@ section .title::after {
   font-size: 25px;
   font-weight: 500;
   margin: 10px 0 7px 0;
+  color: #fff;
 }
 
 /* Contact section styling */
@@ -426,12 +427,13 @@ section .title::after {
   width: 170px;
 }
 
-.contact .right form .button button {
+.contact .right form .button input {
   width: 100%;
   height: 100%;
   border: 2px solid crimson;
   background: crimson;
   color: #fff;
+  padding: 8px;
   font-size: 20px;
   font-weight: 500;
   border-radius: 6px;
@@ -439,7 +441,7 @@ section .title::after {
   transition: all 0.3s ease;
 }
 
-.contact .right form .button button:hover {
+.contact .right form .button input:hover {
   color: crimson;
   background: none;
 }
